--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ node_modules
 /dist
 
 # local env files
-.env.prod.local
-.env.prod.*.local
+.env.local
+.env.*.local
 
 # Log files
 npm-debug.log*
